--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,6 @@
   ],
   "rules": {
     "prettier/prettier": "error",
-    "react/react-in-jsx-scope": "error"
+    "react/react-in-jsx-scope": "off"
   }
 }
