--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "yarn eslint",
+    "lint": "next lint",
+    "lint-fix": "next lint --fix",
     "prepare": "husky install"
   },
   "dependencies": {
