--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "lint-fix": "next lint --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@types/node": "18.11.10",
