--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "private": true,
   "name": "social-network",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "node ./scripts/dev.js",
     "build": "next build",
@@ -13,7 +13,12 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
+  "resolutions": {
+    "styled-components": "^5"
+  },
   "dependencies": {
+    "@fontsource/noto-sans": "^4.5.11",
+    "@tabler/icons": "^1.115.0",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -22,6 +27,8 @@
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reset-css": "^5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "4.9.3"
   },
   "devDependencies": {
@@ -34,6 +41,7 @@
     "@storybook/manager-webpack5": "^6.5.14",
     "@storybook/react": "^6.5.14",
     "@storybook/testing-library": "^0.0.13",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "babel-loader": "^8.3.0",
@@ -42,6 +50,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-storybook": "^0.6.7",
     "husky": "^8.0.2",
-    "prettier": "^2.8.0"
+    "prettier": "^2.8.0",
+    "storybook-addon-styled-component-theme": "^2.0.0"
   }
 }
