--- a/package.json
+++ b/package.json
@@ -22,12 +22,16 @@
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "dayjs": "^1.11.6",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
+    "lodash": "^4.17.21",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
-    "reset-css": "^5.0.1",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-transition-group": "^4.4.5",
     "shade-blend-color": "^1.0.0",
     "styled-components": "^5.3.6",
     "typescript": "4.9.3"
@@ -42,17 +46,20 @@
     "@storybook/manager-webpack5": "^6.5.14",
     "@storybook/react": "^6.5.14",
     "@storybook/testing-library": "^0.0.13",
+    "@types/react-transition-group": "^4.4.5",
     "@types/shade-blend-color": "^1.0.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
     "babel-loader": "^8.3.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-storybook": "^0.6.7",
     "husky": "^8.0.2",
     "prettier": "^2.8.0",
-    "storybook-addon-styled-component-theme": "^2.0.0"
+    "storybook-addon-styled-component-theme": "^2.0.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.0"
   }
 }
