--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint-fix": "next lint --fix",
     "prepare": "husky install",
     "export": "next build && next export",
     "storybook": "start-storybook -p 6006",
@@ -58,6 +57,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-storybook": "^0.6.7",
     "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.0",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "tsconfig-paths-webpack-plugin": "^4.0.0"
