--- a/package.json
+++ b/package.json
@@ -52,9 +52,14 @@
     "@typescript-eslint/parser": "^5.45.0",
     "babel-loader": "^8.3.0",
     "babel-plugin-styled-components": "^2.0.7",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-storybook": "^0.6.7",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
