--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,8 @@
     "react/require-default-props": "off",
     "import/prefer-default-export": "off",
     "import/no-extraneous-dependencies": "off",
-    "@typescript-eslint/no-shadow": "off"
+    "@typescript-eslint/no-shadow": "off",
+    "no-underscore-dangle": "off",
+    "arrow-body-style": "off"
   }
 }
